# hyperstream-kraken

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/hyperstreamkraken/: __init__.py  cli.py
src/hyperstreamkraken/api/: http.py
src/hyperstreamkraken/downloading/: pytubefix_downloader.py  song_downloader.py  ytdlp_downloader.py
src/hyperstreamkraken/messaging/: rabbitmq_event.py  rabbitmq_event_bus.py  song_download_event.py  song_download_event_handler.py  song_download_fail_event.py  song_download_requested_event.py  song_download_requested_event_handler.py  song_downloaded_event.py  song_expose_event.py  song_expose_event_handler.py  song_exposed_event.py  song_find_event.py  song_find_event_handler.py  song_found_event.py  song_list_event.py  song_list_event_handler.py  song_listed_event.py
src/hyperstreamkraken/metadata/: song.py
src/hyperstreamkraken/models/: base.py  song.py  song_metadata.py
src/hyperstreamkraken/service/: up.py
src/hyperstreamkraken/storage/: song_files_storage.py  song_metadata_storage.py  song_storage.py
src/hyperstreamkraken/sugar/: coalesce.py
src/hyperstreamkraken/utils/: s3.py  todo.py
src/hyperstreamkraken/utils/messaging/: fail_event.py
src/hyperstreamkraken/utils/pytubefix/: audio_buffering.py
src/hyperstreamkraken/youtube/: youtube_search.py
